# Sentinel

./: .gitignore  pyproject.toml  requirments.txt
src/sentinel/: __init__.py  preprocess.py  train.py
tests/: test.py  test_preprocess.py  test_train.py
