[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel project"
requires-python = ">=3.8"
dependencies = [
	"joblib>=1.3.0",
	"numpy>=1.24.0",
	"pandas>=2.0.0",
	"scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

